# rust-frontend

./: Cargo.toml  readme.md
config/: config.yaml
config/domains/: 01 RHYTHM YAML.yaml  01 Rhythm.yaml  01.yaml  02 TONALITY YAML.yaml  03 STRUCTURE YAML.yaml  04 DIVERSITY YAML.yaml
config/score/: score.yaml
src/: controller.rs  main.rs  midievol.rs  reconcile.rs  scheduler.rs  scoring.rs  tui.rs
