[package]
name = "blind-music-maker-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
midir = "*"
env_logger = "*"
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "*", features = ["json", "rustls-tls", "blocking"] }
ratatui = "0.29"
crossterm = "0.28"